--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  scroll-behavior: smooth;
+}
+
+:target {
+  scroll-margin-top: 1em;
+}
+
+body {
+  @apply font-lato
+}
